2 minor issues highlighted by SonarQube resolved